# CodeReviewAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  logger.py  main.py  prompt.txt
src/api/: router.py
src/api/review/: models.py  test_review.py  views.py
src/services/: github_service.py  openai_service.py  prompt_service.py
src/services/service_github/: service.py  test_github.py
src/services/service_openai/: service.py  test_openai.py
src/services/service_prompt/: service.py  test_prompt.py
src/utils/: environment.py  url.py
src/utils/util_ai/: ai_response.py  test_ai_response.py
src/utils/util_environment/: environment.py
src/utils/util_redis/: rd.py
src/utils/util_url/: test_url.py  url.py
