[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Grade"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cryptography = "43.0.3"
deprecated = "1.2.14"
distro = "1.9.0"
fastapi = "0.115.4"
frozenlist = "1.5.0"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.6.1"
multidict = "6.1.0"
openai = "1.53.0"
packaging = "24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
